[package]
name = "simple-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
dashmap = "6.1"
argon2 = { version = "0.5", features = ["std"] }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { version = "0.8" }
